fixed overflow issue in mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,10 +15,32 @@
   }
 }
 
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden !important; /* Overrides any inline or conflicting styles */
+  width: 100%; /* Prevent unintended overflows */
+}
+
+.section {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
+
+.container {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
+
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 @tailwind base;
@@ -58,7 +80,14 @@ body {
 
 html, body {
   overflow-x: hidden;
+  width: 100%;
+  
 }
+
+.hero-container {
+  width: 100vw; /* Restrict width to viewport width */
+  overflow-x: hidden; /* Prevent content from overflowing horizontally */
+} 
 
 @media screen and (max-width: 768px) {
   h1 {
@@ -95,7 +124,6 @@ html, body {
 }
 
 .gradient-02 {
-  position: absolute;
   width: 200px;
   height: 438px;
   top: 0px;
@@ -114,7 +142,6 @@ html, body {
 }
 
 .gradient-03 {
-  position: absolute;
   width: 404px;
   height: 800px;
   left: 20%;
@@ -126,7 +153,6 @@ html, body {
 }
 
 .gradient-04 {
-  position: absolute;
   width: 304px;
   height: 100vh;
   left: 30%;
@@ -146,7 +172,6 @@ html, body {
 }
 
 .feedback-gradient {
-  position: absolute;
   width: 200px;
   height: 316px;
   left: 0px;
@@ -157,7 +182,6 @@ html, body {
 }
 
 .footer-gradient {
-  position: absolute;
   width: 500px;
   height: 100px;
   left: 37%;
